--- a/JuanFronttoEnd/Views/Shared/_Layout.cshtml
+++ b/JuanFronttoEnd/Views/Shared/_Layout.cshtml
@@ -112,16 +112,16 @@
                                                         <a href="#">column 01</a>
                                                         <ul>
                                                             <li>
-                                                                <a href="shop.html">shop grid left sidebar</a>
+                                                                <a  href="shop.html">Shop</a>
                                                             </li>
                                                             <li>
                                                                 <a href="shop-grid-right-sidebar.html">shop grid right sidebar</a>
                                                             </li>
                                                             <li>
-                                                                <a href="shop-list-left-sidebar.html">shop list left sidebar</a>
+                                                                <a href="shop-list-left-sidebar.html" >shop list left sidebar</a>
                                                             </li>
                                                             <li>
-                                                                <a href="shop-list-right-sidebar.html">shop list right sidebar</a>
+                                                                <a href="shop-list-right-sidebar.html"  >shop list right sidebar</a>
                                                             </li>
                                                         </ul>
                                                     </li>
